--- a/src/content/projects/sample copy.mdx
+++ b/src/content/projects/sample copy.mdx
@@ -6,7 +6,11 @@ projectType: Branding
 {/* using components in an MDX file */}
 import SampleComponent from "@components/SampleComponent.astro";
 
-lorem ipsum dolor sit amet, consectetur adipiscing elit.
+lorem ipsum dolor sit amet, _consectetur adipiscing_ elit.
 Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.
+
+## Here's a heading
+
+lorem ipsum bla bla bla
 
 <SampleComponent />
